{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 500,
  "lineage": "5e887084-4ed2-17b7-f1c4-a8072216f080",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0947419f40e9dc586",
            "domain": "vpc",
            "id": "eipalloc-0fb448a5ba5a0ba1a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0941192354bc39e88",
            "private_dns": "ip-10-0-0-199.ec2.internal",
            "private_ip": "10.0.0.199",
            "public_dns": "ec2-44-196-180-24.compute-1.amazonaws.com",
            "public_ip": "44.196.180.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b85c8c0f91cb4656",
            "domain": "vpc",
            "id": "eipalloc-005b1f752efafe409",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d91330aca8bb6882",
            "private_dns": "ip-10-0-1-237.ec2.internal",
            "private_ip": "10.0.1.237",
            "public_dns": "ec2-52-4-222-105.compute-1.amazonaws.com",
            "public_ip": "52.4.222.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_sever",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:808485220920:instance/i-054a36898f7270b88",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054a36898f7270b88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-mp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08e982a9cc1f4a332",
            "private_dns": "ip-10-0-0-62.ec2.internal",
            "private_ip": "10.0.0.62",
            "public_dns": "ec2-54-174-254-122.compute-1.amazonaws.com",
            "public_ip": "54.174.254.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a76052c26b9f7a6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072ebcbf97c2d051c",
            "tags": {
              "Name": "mp_leo-bastion_server"
            },
            "tags_all": {
              "Name": "mp_leo-bastion_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00bcb939452286459"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_rds",
            "aws_subnet.private_db_a",
            "aws_subnet.private_db_c",
            "aws_subnet.public_a",
            "aws_vpc.vpc",
            "aws_db_instance.database",
            "aws_db_subnet_group.dbsg",
            "aws_security_group.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:internet-gateway/igw-0e2d55cc44821d347",
            "id": "igw-0e2d55cc44821d347",
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb448a5ba5a0ba1a",
            "id": "nat-0ed6562e30cc391c8",
            "network_interface_id": "eni-0941192354bc39e88",
            "private_ip": "10.0.0.199",
            "public_ip": "44.196.180.24",
            "subnet_id": "subnet-072ebcbf97c2d051c",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          },
          "dependencies": [
            "aws_subnet.public_a",
            "aws_vpc.vpc",
            "aws_eip.nat",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005b1f752efafe409",
            "id": "nat-03988f084db5d37c2",
            "network_interface_id": "eni-0d91330aca8bb6882",
            "private_ip": "10.0.1.237",
            "public_ip": "52.4.222.105",
            "subnet_id": "subnet-09efbacdb5d3c8fab",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-010fcc01641092e14",
            "id": "rtb-010fcc01641092e14",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed6562e30cc391c8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-0783beab1ae2b1ad5",
            "id": "rtb-0783beab1ae2b1ad5",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03988f084db5d37c2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-042ffae35370a62b0",
            "id": "rtb-042ffae35370a62b0",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2d55cc44821d347",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e6e479517a9f305",
            "route_table_id": "rtb-010fcc01641092e14",
            "subnet_id": "subnet-068ea3e200ce89629"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw_a",
            "aws_route_table.router_private_a",
            "aws_subnet.private_app_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc",
            "aws_eip.nat",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056082b423ca46225",
            "route_table_id": "rtb-0783beab1ae2b1ad5",
            "subnet_id": "subnet-078496eded0922666"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c",
            "aws_route_table.router_private_c",
            "aws_subnet.private_app_c",
            "aws_subnet.public_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea653612c55393b5",
            "route_table_id": "rtb-010fcc01641092e14",
            "subnet_id": "subnet-02551119a443fbdcc"
          },
          "dependencies": [
            "aws_subnet.private_db_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc",
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a",
            "aws_route_table.router_private_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0153d7979adc8d7e7",
            "route_table_id": "rtb-0783beab1ae2b1ad5",
            "subnet_id": "subnet-0b671f6ad4a91fdac"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c",
            "aws_route_table.router_private_c",
            "aws_subnet.private_db_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075b3e01387596447",
            "route_table_id": "rtb-042ffae35370a62b0",
            "subnet_id": "subnet-072ebcbf97c2d051c"
          },
          "dependencies": [
            "aws_route_table.router_public",
            "aws_subnet.public_a",
            "aws_vpc.vpc",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0116085fc0123afad",
            "route_table_id": "rtb-042ffae35370a62b0",
            "subnet_id": "subnet-09efbacdb5d3c8fab"
          },
          "dependencies": [
            "aws_subnet.public_c",
            "aws_vpc.vpc",
            "aws_internet_gateway.igw",
            "aws_route_table.router_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-mp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-03af9ed590937b1ac",
            "description": "acesso-ssh-mp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03af9ed590937b1ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh-mp",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-00bcb939452286459",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bcb939452286459",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 5002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5002
              }
            ],
            "name": "apis",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-0cf786f636e986a39",
            "description": "sg_rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf786f636e986a39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_rds",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-068ea3e200ce89629",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-068ea3e200ce89629",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-078496eded0922666",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-078496eded0922666",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-02551119a443fbdcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-02551119a443fbdcc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0b671f6ad4a91fdac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0b671f6ad4a91fdac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-072ebcbf97c2d051c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-072ebcbf97c2d051c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-09efbacdb5d3c8fab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09efbacdb5d3c8fab",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0edecbb212d38e2c5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:vpc/vpc-0edecbb212d38e2c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0ccf4938bbde49b10",
            "default_route_table_id": "rtb-03e423a701f7e2e7c",
            "default_security_group_id": "sg-05b1b75714e061a03",
            "dhcp_options_id": "dopt-02d28578",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0edecbb212d38e2c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03e423a701f7e2e7c",
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          }
        }
      ]
    }
  ]
}